[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/dashboard/new_widget_popup/filter_widget_element.gd" type="Script" id=1]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=3]
[ext_resource path="res://components/shared/combo_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/icon_128_rename.svg" type="Texture" id=5]

[node name="FilterElement" type="GridContainer"]
margin_top = 37.0
margin_right = 616.0
margin_bottom = 85.0
custom_constants/hseparation = 5
columns = 5
script = ExtResource( 1 )

[node name="LabelLabel" type="Label" parent="."]
margin_right = 234.0
margin_bottom = 16.0
theme_type_variation = "LabelSmall"
text = "Label"

[node name="OperatorLabel" type="Label" parent="."]
margin_left = 239.0
margin_right = 319.0
margin_bottom = 16.0
theme_type_variation = "LabelSmall"
text = "Operator"

[node name="ValueLabel" type="Label" parent="."]
margin_left = 324.0
margin_right = 558.0
margin_bottom = 16.0
theme_type_variation = "LabelSmall"
text = "Value"

[node name="Spacer" type="Control" parent="."]
margin_left = 563.0
margin_right = 587.0
margin_bottom = 16.0

[node name="Spacer2" type="Control" parent="."]
margin_left = 592.0
margin_right = 616.0
margin_bottom = 16.0

[node name="LabelsComboBox" parent="." instance=ExtResource( 4 )]
margin_top = 20.0
margin_right = 234.0
margin_bottom = 48.0
size_flags_horizontal = 3
items = [ "" ]

[node name="OperatorsComboBox" parent="." instance=ExtResource( 4 )]
margin_left = 239.0
margin_top = 20.0
margin_right = 319.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 24 )
items = [ "=", "!=", "=~", "!~" ]

[node name="ValueComboBox" parent="." instance=ExtResource( 4 )]
margin_left = 324.0
margin_top = 20.0
margin_right = 558.0
margin_bottom = 48.0
size_flags_horizontal = 3
items = [ "" ]

[node name="ConvertButton" parent="." instance=ExtResource( 2 )]
margin_left = 563.0
margin_top = 20.0
margin_right = 587.0
margin_bottom = 48.0
rect_min_size = Vector2( 24, 28 )
hint_tooltip = "Convert to manual Filter"
icon_tex = ExtResource( 5 )
icon_margin = 1

[node name="DeleteFilterButton" parent="." instance=ExtResource( 2 )]
margin_left = 592.0
margin_top = 20.0
margin_right = 616.0
margin_bottom = 48.0
rect_min_size = Vector2( 24, 28 )
hint_tooltip = "Add Filter"
icon_tex = ExtResource( 3 )
icon_margin = 1

[connection signal="option_changed" from="LabelsComboBox" to="." method="_on_LabelsComboBox_option_changed"]
[connection signal="option_changed" from="OperatorsComboBox" to="." method="_on_OperatorsComboBox_option_changed"]
[connection signal="text_changed" from="OperatorsComboBox" to="." method="_on_OperatorsComboBox_text_changed"]
[connection signal="option_changed" from="ValueComboBox" to="." method="_on_ValueComboBox_option_changed"]
[connection signal="text_changed" from="ValueComboBox" to="." method="_on_ValueComboBox_text_changed"]
[connection signal="pressed" from="ConvertButton" to="." method="_on_ConvertButton_pressed"]
[connection signal="pressed" from="DeleteFilterButton" to="." method="_on_DeleteFilterButton_pressed"]
